--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "material-icons-react": "^1.0.4",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.5",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
